--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,41 @@
-buildscript {
-    // 전역변수(springBootVersion) 값 설정부
-    // 스프링부트 그레이들 플러그인의 2.1.7.RELEASE를 의존성으로 받음
-    ext {
-        springBootVersion = '2.1.7.RELEASE'
-    }
-    // 각종 의존성(라이브러리)들을 어떤 원격저장소에서 받을지 지정
-    repositories {
-        mavenCentral()
-    }
-    // 버전 설정
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+plugins { // (1)
+    id 'org.springframework.boot' version '2.4.1' // RELEASE 삭제
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'java'
 }
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
-group 'com.joohyung.book'
-version '1.0-SNAPSHOT'
+group 'com.jojoldu.book'
+version '1.0.4-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
-// 프로젝트 개발에 필요한 의존성들을 선언하는 곳
+
+// for Junit 5
+test { // (2)
+    useJUnitPlatform()
+}
+
 dependencies {
+    //(3)
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
+
+    // lombok
+    implementation('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+    testImplementation('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
+
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation("org.mariadb.jdbc:mariadb-java-client")
+    implementation('com.h2database:h2')
+
+//    implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 권한 관련
+//    implementation('org.springframework.session:spring-session-jdbc') // 권한 관련
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+//    testImplementation("org.springframework.security:spring-security-test") // 권한 관련
 }
