--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,11 @@ dependencies {
     implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation('com.h2database:h2')
 
-//    implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 권한 관련
-//    implementation('org.springframework.session:spring-session-jdbc') // 권한 관련
+    // 클라이언트측 소셜 기능 구현시 필요한 의존성
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 권한 관련
+    implementation('org.springframework.session:spring-session-jdbc') // 권한 관련
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-//    testImplementation("org.springframework.security:spring-security-test") // 권한 관련
+    // 테스트를 위해 임의로 인증된 사용자를 추가하여 api테스트를 하기위한 설정
+    testImplementation("org.springframework.security:spring-security-test") // 권한 관련
 }
