--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@
 #spring.session.store-type=jdbc
 
 # ??? 010-8852-7968
+# ????? tmp??? ????
 
 spring.profiles.include=real-oauth
 spring.jpa.show_sql=true
