--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@
 ##?? ???? JDBC? ??
 #spring.session.store-type=jdbc
 
-# ??? 010-8852-7968
-# ????? tmp??? ????
+# Joohyung_Kim 010-8852-7968
+# Fin...
 
 spring.profiles.include=real-oauth
 spring.jpa.show_sql=true
