--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,13 @@ script: "./gradlew clean build"
 # deploy가 실행되기 전에 수행할 내용
 # 현재위치의 모든파일을 압축하여 새 디렉토리를 생성하고 압축파일을 이동시킴
 before_deploy:
-  - zip -r joohyung-springboot-webservice *
-  - mkdir -p deploy
-  - mv joohyung-springboot-webservice.zip deploy/joohyung-springboot-webservice.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/joohyung-springboot-webservice.zip
 
 # before_deploy때 생성한 deploy 디렉토리 내 파일들을 S3로 전송
 deploy:
