--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,15 @@ files:
   - source: /       # codedeploy로 부터 받은 파일중 destination으로 전달할 대상(/: 전체파일)
     destination: /home/ec2-user/app/step2/zip/
     overwrite: yes  # 덮어쓰기 옵션
+
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+
+hooks:
+  ApplicationStart:
+    - location: deploy.sh
+      timeout: 60
+      runas: ec2-user
