--- a/appspec.yml
+++ b/appspec.yml
@@ -23,4 +23,4 @@ hooks:
   ValidateService:
     - location: health.sh # 새로운 springboot가 정상 실행되는지 확인
       timeout: 60
-      runas: ec2-user1
+      runas: ec2-user
